<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.makinap.tineo.neotrack.MainActivity">
    <item
        android:id="@+id/action_go_list"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/action_return_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_update_tiendas"
        android:orderInCategory="100"
        android:title="@string/action_update_tiendas"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
